--- a/scss/global/mixin/_breakpoint.scss
+++ b/scss/global/mixin/_breakpoint.scss
@@ -1,5 +1,6 @@
 $breakpoint: (
   TB-L: "screen and(max-width:1024px)",
+  TB-L2: "screen and(max-width:775px)",
   TB: "screen and(max-width:800px)",
   TB2: "screen and(max-width:645px)",
   TB3: "screen and(max-width:560px)",
