--- a/scss/global/setting/_color.scss
+++ b/scss/global/setting/_color.scss
@@ -8,9 +8,11 @@ $lightblue: rgba(9, 59, 155, 1);
 $yellow: rgba(250, 197, 61, 0.5);
 $yellow2: rgba(250, 197, 61, 1);
 $yellow3: rgba(236, 174, 15, 1);
+$yellow4: rgba(236, 174, 15, 0.66);
+$yellow5: rgba(250, 197, 61, 0.1);
 $green: #A1B525;
 $red: #D48968;
-$black: #000000;
+$black: rgba(0, 0, 0, 0.62);
 $parpul: rgba(216, 209, 236, 1);
 $parpul2: rgba(44, 14, 132, 0.09);
 $pink: rgba(239, 221, 221, 1);
