--- a/scss/foundation/_reset.scss
+++ b/scss/foundation/_reset.scss
@@ -50,7 +50,7 @@ margin:0;
 padding:0;
 // font-size:100%;
 vertical-align:baseline;
-background:transparent;
+// background:transparent;
 }
 
 /* change colours to suit your needs */
