--- a/css/style.css
+++ b/css/style.css
@@ -320,9 +320,9 @@ button {
 }
 .fluid_logo {
   position: absolute;
-  top: 45%;
-  left: 30%;
-  font-size: clamp(1.6rem, 2.28vw, 3.2rem);
+  top: 38%;
+  left: 20%;
+  font-size: clamp(2rem, 4.28vw, 6rem);
   transform: rotate(-25deg);
 }
 
@@ -446,7 +446,16 @@ button {
 }
 
 .works {
-  margin-bottom: 4%;
+  margin-bottom: 6%;
+}
+.works::after {
+  content: "";
+  display: block;
+  height: 1px;
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 6%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.62);
 }
 .works_wrapper {
   padding-bottom: 6%;
