--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -304,9 +304,9 @@ span {
 
 .fluid_logo {
   position: absolute;
-  top: 45%;
-  left: 30%;
-  font-size: clamp(1.6rem,2.28vw,3.2rem);
+  top: 38%;
+  left: 20%;
+  font-size: clamp(2rem,4.28vw,6rem);
   transform: rotate(-25deg);
 }
 
@@ -414,7 +414,17 @@ span {
 
 
 .works {
-  margin-bottom: 4%;
+  margin-bottom: 6%;
+  
+  &::after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 70%;
+    margin: 0 auto;
+    padding-top: 6%;
+    border-bottom: 1px solid $black;
+  }
   &_wrapper {
     padding-bottom: 6%;
   }
