--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ button {
   top: 35%;
   left: 10%;
 }
-@media screen and (max-width:800px) {
+@media screen and (max-width:1024px) {
   .fluid_container {
     top: 28%;
   }
@@ -282,10 +282,10 @@ button {
   background: rgba(250, 197, 61, 0.5);
   animation: fluidrotate 30s ease 0s infinite;
 }
-@media screen and (max-width:800px) {
+@media screen and (max-width:1024px) {
   .fluid {
-    width: 25vh;
-    height: 25vh;
+    width: 35vh;
+    height: 35vh;
   }
 }
 @media screen and (max-width:560px) {
@@ -320,10 +320,16 @@ button {
 }
 .fluid_logo {
   position: absolute;
-  top: 38%;
-  left: 20%;
+  top: 40%;
+  left: 28%;
   font-size: clamp(2rem, 4.28vw, 6rem);
   transform: rotate(-25deg);
+}
+@media screen and (max-width:1024px) {
+  .fluid_logo {
+    top: 45%;
+    left: 30%;
+  }
 }
 
 .main_txt {
@@ -936,7 +942,8 @@ input, select {
 @media screen and (max-width:375px) {
   .underlayer_top_wrapper .page_top_txt {
     padding-top: 6%;
-    padding-left: 0;
+    margin: unset;
+    width: 80%;
   }
 }
 
@@ -1091,6 +1098,10 @@ table td {
   border-radius: 50px;
   font-size: clamp(2rem, 2.57vw, 3.6rem);
   background-color: rgba(236, 174, 15, 0.66);
+  transition: all 1s;
+}
+.under_wrapper form .send_btn:hover {
+  background-color: rgb(239, 221, 221);
 }
 @media screen and (max-width:560px) {
   .under_wrapper form .send_btn {
