--- a/scss/layout/_company.scss
+++ b/scss/layout/_company.scss
@@ -62,7 +62,7 @@
     width: fit-content;
     margin: 0 auto;
     margin-bottom: 5%;
-    padding-bottom: 1%;
+    // padding-bottom: 1%;
     font-family:  'Architects Daughter', cursive ;
     font-size: clamp(2rem,2.85vw,4rem);
     border-bottom: 2px solid $parpul2;
