--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ button {
 @media screen and (max-width:800px) {
   .header_li a {
     color: #fff;
-    font-size: 2rem;
+    font-size: 3rem;
   }
 }
 
@@ -329,6 +329,12 @@ button {
   .fluid_logo {
     top: 45%;
     left: 30%;
+  }
+}
+@media screen and (max-width:375px) {
+  .fluid_logo {
+    top: 36%;
+    left: 18%;
   }
 }
 
@@ -589,6 +595,14 @@ button {
 .success_box_txt_logo img {
   width: 100%;
 }
+@media screen and (max-width:375px) {
+  .success_box_txt_logo {
+    width: 30%;
+  }
+  .success_box_txt_logo img {
+    width: 100%;
+  }
+}
 .success_under_txt {
   background-color: rgb(216, 209, 236);
   padding: 5% 0;
@@ -640,7 +654,7 @@ button {
 }
 @media screen and (max-width:645px) {
   .news_box_txt {
-    width: 48%;
+    width: 49%;
   }
 }
 .news_box_pagenation {
@@ -706,6 +720,9 @@ button {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.news .news_box .news_box_inner:nth-of-type(3) .news_box_txt {
+  padding-bottom: 0;
 }
 
 .contact_sub_ttl {
@@ -990,6 +1007,11 @@ table {
   text-align: left;
   margin-bottom: 8%;
   font-size: clamp(1.6rem, 1.71vw, 2.4rem);
+}
+@media screen and (max-width:480px) {
+  table {
+    width: 70%;
+  }
 }
 table tr {
   border-bottom: 1px solid rgb(22, 12, 52);
