--- a/css/style.css
+++ b/css/style.css
@@ -1175,6 +1175,13 @@ table td {
   margin-bottom: 6%;
   text-align: center;
 }
+.under_wrapper .under_news_txt_date {
+  width: fit-content;
+  margin: 0 auto;
+  margin-bottom: 2%;
+  font-size: clamp(1.4rem, 1.42vw, 2rem);
+  border-bottom: 1px solid rgb(248, 13, 13);
+}
 .under_wrapper .under_news_txt_ttl {
   padding-bottom: 6%;
   font-size: clamp(1.6rem, 1.42vw, 2rem);
