--- a/scss/layout/_news.scss
+++ b/scss/layout/_news.scss
@@ -18,6 +18,13 @@
       margin: 0 auto;
       margin-bottom: 6%;
       text-align: center;
+      &_date {
+        width: fit-content;
+        margin: 0 auto;
+        margin-bottom: 2%;
+        font-size: clamp(1.4rem,1.42vw,2rem);
+        border-bottom: 1px solid $red;
+      }
       &_ttl {
         padding-bottom: 6%;
         font-size: clamp(1.6rem,1.42vw,2rem);
